# Backend-nest-Huancavelica-Alertas-Agricolas

./: .editorconfig  .env.example  .gitignore  CASOS_DE_USO.md  CHANGELOG.md  CONTRIBUTING.md  DATABASE_DOCUMENTATION.md  LICENSE  README.md  SECURITY.md  database-schema.sql  database.dbml  docker-compose.yml  package-lock.json  package.json
.github/: dependabot.yml
.github/workflows/: block-node-modules.yml  ci-cd.yml
backend/: .gitignore  README.md  package.json
backend/core-services/alerts-service/: README.md
backend/core-services/notifications-service/: README.md
backend/core-services/users-service/: README.md
backend/infra/: docker-compose.yml
backend/infra-services/ingress-service/: README.md
backend/infra/infra/: docker-compose.yml
backend/infra/k8s/: alerts-deployment.yaml  logs-deployment.yaml  notifications-deployment.yaml  users-deployment.yaml
backend/shared/: README.md  pyproject.toml
backend/shared/shared/shared/: __init__.py  dtos.py  logging_helper.py  phone.py  template_renderer.py
backend/shared/shared/shared/city_alerts_shared.egg-info/: PKG-INFO  SOURCES.txt  requires.txt
microservices/: .env  .env.example  README.md  docker-compose.yml  package.json  test-alert.json  test-weather-alert.json
microservices/gateway/api-gateway/: .eslintrc.json  Dockerfile  package-lock.json  package.json
scripts/: cleanup-tracked-node-modules.ps1  debug-remove-node-modules.ps1  ensure-remove-node-modules-from-index.ps1  fix-node-modules.ps1  print-gitignore-lines.ps1  remove-tracked-node-files.ps1  remove-tracked-node-modules-by-dir.ps1
(+96 files in other folders)
