[project]

name = "city_alerts_shared"
version = "0.1.0"
description = "Utilidades y DTOs compartidos para city-alerts-backend"
authors = [
    { name = "Equipo City Alerts" }
]
readme = "README.md"
requires-python = ">=3.9"
dependencies = [
    "pydantic>=2.0.0",
    "phonenumbers",
    "jinja2",
]

[build-system]
requires = ["setuptools", "wheel"]
build-backend = "setuptools.build_meta"

[tool.setuptools.packages.find]
where = ["shared"]
